# t2elzeth.ru

./: .gitignore  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  link.sh
main_backend/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements.txt  test.py
main_backend/apps/ar/: admin.py  apps.py  forms.py  mixins.py  models.py  send.py  storage.py  urls.py  views.py
main_backend/apps/ar/api/: email.py  serializers.py  urls.py  views.py
main_backend/apps/ar/management/commands/: initadmin.py
main_backend/apps/ar/migrations/: 0001_initial.py  0002_aradmin.py  0002_auto_20210321_1724.py  0003_ar_slug.py  0003_auto_20210322_1509.py  0004_ar_scale.py  0004_auto_20210403_0816.py  0005_auto_20210509_1422.py
main_backend/apps/ar/static/ar/: add.css  custom_projects.json  style.css
main_backend/apps/ar/static/img-tracking/: config.json
main_backend/apps/ar/templates/ar/: add.html  base.html  custom-project.html  detail.html  ok.html  (+2 more)
main_backend/apps/homepage/: urls.py  views.py
main_backend/apps/portfolio/: admin.py  models.py  urls.py  views.py
main_backend/apps/portfolio/migrations/: 0001_initial.py
main_backend/apps/socketio_app/: networking.py
main_backend/core/: settings.py  urls.py
main_backend/nginx/: Dockerfile  default.conf
main_backend/static/img-tracking/data/: nft
main_backend/staticfiles/ar/: custom_projects.json
main_backend/staticfiles/img-tracking/css/: main.css
main_backend/staticfiles/img-tracking/js/: ARnft.js
main_backend/utils/: custom_view.py
(+47 files in other folders)
